Change Log

Ryan- 4-23-2020

Initial Code Commit

-- Express backend update
  -- Added app.js file
    - Init middleware (for testing purposes)
	  - Test code with a error handler middleware
	- Server running on port 3000
  -- Added folder config (if working as intended should not show in git)
    - Contains mongoDB connection string
  -- Added routes folder
    - Contains index.js file (This file initializes app routes and exports to router variable
	- Router then can be used in the app.js file
	
*** This is just a template to serve as a jumping of point ***
  