@@ -3,7 +3,9 @@ html(lang= "en")
     head
         title Pandemic Health HomePort
     body
+        h1 Pandemic Health HomePort
+            h3 "Your one stop remote healtcare app"
         block content
     footer
-        p(style="text-align:center;") 
+        p
             i Humble AD410-Group-F Production
