@@ -1,0 +1,10 @@
+extends layout
+block content  
+    h3 Help is one step away, Please Login!
+
+    form(action= 'patient-login', method= 'post')
+        label Email:
+            input(type= 'text', name= 'email')
+        label Password:
+            input(type= 'text', name= 'password')
+        button(type= 'submit') LOGIN
